Updated responsiveness of footer

--- a/index.html
+++ b/index.html
@@ -1711,7 +1711,7 @@
             >
               language
             </span>
-            <span class="header-text">ENG</span>
+            <span class="header-text bottom-text">ENG</span>
             <span
               class="material-icons md-grey md-18-anti-rpad language-key-down"
             >
